--- a/public/Restaurantly/assets/css/style.css
+++ b/public/Restaurantly/assets/css/style.css
@@ -203,7 +203,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 600px;
+}
+
+.masuk-logo
+{
+  display: inline-block;
+  width:100%;
+  height:100%;
+  margin-top:-10px;
+
 }
 
 /*--------------------------------------------------------------
@@ -935,7 +944,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
